# NanoEngine-PyTorch

./: .gitignore  README.md  pyproject.toml
examples/: log.txt  yolo.py  yolo_q_layer.py
examples/runs/detect/train/: args.yaml
examples/runs/detect/train2/: args.yaml
examples/simple_cnn/: lenet5_quant.pth  lenet5_quant_train.py  mnist.py  resnet18_voc.py
onnx_model/: quantized_model.onnx
src/: __init__.py
src/nept/: __init__.py
src/nept/qnn/: analysis.py  quantize.py
src/nept/scripts/: generate_inference_code.py  quantize_export.py
src/qnn/: analysis.py  debug_quantize.py  quantize.py
src/qnn/codegen/: c_codegen.py
src/scripts/: quantize_export.py
temp/: ex_quantize.py  export_c.py  layer.py  quantize_export.py
tests/: test_layer.py  test_q_packed_bits.py  test_quantize_export.py  test_quantize_export_rnn.py
